# tax-buddy

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  BACKEND_AUDIT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  FILES_MODIFIED.md  Makefile  PERFORMANCE_OPTIMIZATION.md  PRE_PUSH_AUDIT.md  README.md  docker-compose.yml  rebuild-podman.sh  test_performance.py
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt  requirements.txt.optimized  test_api_key_management.py  validate_application.py
backend/app/: db.py  main.py  schemas.py
backend/app/api/: endpoints.py  routes.py
backend/app/api/routes/: extract.py  itr.py  tax.py  (+2 more)
backend/app/core/: config.py  database.py  logging_config.py
backend/app/ml/: dataset.py  evaluate.py  infer.py  ner_model.py  schema.py  train.py
backend/app/models/: __init__.py  db_models.py  schemas.py
backend/app/pipeline/: itr_generator.py  ner_extractor.py  ocr_engine.py  preprocessor.py  tax_engine.py  validator.py
backend/app/schemas/: __init__.py  schemas.py
backend/app/services/: ai_validation_service.py  extraction.py  groq_service.py  itr_service.py  normalization.py  ocr.py  output.py  pipeline.py  preprocessing.py  tax.py  tax_optimization_service.py  tax_service.py  validation.py  validation_service.py
backend/data/: taxbuddy.db-shm  taxbuddy.db-wal
backend/ml/ner/: __init__.py  ner_service.py  regex_utils.py  regex_utils_26as.py
backend/ml/ocr/: __init__.py  ocr_service.py  preprocess.py
backend/tests/: test_pipeline.py  test_tax.py  test_validation.py
backend/utils/: __init__.py
(+44 files in other folders)
